meja/tests/statement_no_semi.meja
let x = 15
let y = 18
